# ONTOLOGY_MILVUS_INTEGRATION

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
scripts/: categories_mapping.csv  column_data_feeder.py  create_tables_collection.ipynb  example.md  table_data_feeder.py
src/: app.py  startup.py
src/api/: routes.py
src/api/routes/: __init__.py  vectordb.py
src/config/: settings.py
src/models/: health_models.py  response_models.py
src/services/: openai_service.py  vectordb_service.py
tests/: test.py
