[project]
name = "ontology-milvus-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "google-auth>=2.41.1",
    "google-cloud-storage>=3.4.1",
    "openai>=2.6.1",
    "pymilvus>=2.6.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "uvicorn>=0.38.0",
]
